--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/webAppII_lab02
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.show-sql=false
+app.config.expiration_time = 30000
+
+
