--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-app.config.expiration_time = 30000
-
+app.config.expiration_time = 300000
+app.config.hmac_key = This is a very strong secret, do not share with no one!
 
